Integración del campo ingreActivo en compras y almacén

--- a/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.css
+++ b/frontFarm/src/app/components/ajuste-inventario/modal-editar-producto/modal-editar-producto.component.css
@@ -9,7 +9,7 @@
 }
 
 .modal-content {
-  background: rgb(141, 250, 247);
+  background:azure;
   padding: 20px;
   border-radius: 8px;
   width: 1000px;
