--- a/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
+++ b/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
@@ -440,6 +440,11 @@
                         <input type="text" formControlName="nombre" #firstInput class="form-control" />
                     </div>
 
+                    <div class="col-12">
+                        <label>Ingredientes activos</label>
+                        <input type="text" formControlName="ingreActivo" #firstInput class="form-control" />
+                    </div>
+
                     <div class="col-6">
                         <label>Renglón 1</label>
                         <input type="text" formControlName="renglon1" class="form-control" />
