--- a/frontFarm/src/app/pages/compras/compras.component.html
+++ b/frontFarm/src/app/pages/compras/compras.component.html
@@ -375,6 +375,21 @@
                         <input type="text" formControlName="nombre" #firstInput class="form-control" />
                     </div>
 
+                    <div class="col-12">
+                        <label>Ingredientes activos </label>
+                        <input type="text" formControlName="ingreActivo" #firstInput class="form-control" />
+                    </div>
+
+                    <div class="col-6">
+                        <label>Renglón 1</label>
+                        <input type="text" formControlName="renglon1" #firstInput class="form-control" />
+                    </div>
+
+                    <div class="col-6">
+                        <label>Renglón 2</label>
+                        <input type="text" formControlName="renglon2" #firstInput class="form-control" />
+                    </div>
+
                     <div class="col-3">
                         <label>Código de barras *</label>
                         <input type="text" formControlName="codigoBarras" class="form-control" />
