--- a/frontFarm/src/app/pages/ventas/ventas.component.css
+++ b/frontFarm/src/app/pages/ventas/ventas.component.css
@@ -183,6 +183,13 @@
   padding: 5px;
 }
 
+.modal-x{
+  position: absolute;
+  top: -6px;
+  right: -6px;
+  z-index: 5;
+}
+
 .select {
   width: 300px;
   height: 41px;
